--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -53,7 +53,7 @@
         color: $color-grey-dark-3;
         box-shadow: 1px 1.5px 1px 0px $color-grey-dark;
         font-size: 1rem;        
-        width: auto;
+        width: 50px;
         margin: 0;
         display: inline-block;
         transition: all .5s;
